# CP-Tracker

./: README.md  main.py  pyproject.toml  requirements.txt
data/: collections.json  idNames.json  passwords.json  public.json
static/: login.css  main.css  passwords.json
static/css/: homePage.css  login.css  main.css
static/data/: collections.json  idCount.json  passwords.json
static/js/: homePage.js
templates/: homePage.html  idChecker.html  index.html  success.html  template.html
